# triel

./: .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  install_lms.sh  pyproject.toml
.cursor/rules/: python-run.mdc  python-style.mdc
.github/workflows/: build-docs.yml  pre-commit.yml  pypi-publish.yml
data/: elinker.sample.csv
dev/: dev_coref.py  dev_relation.py
docs/: README.md
docs/source/: conf.py  index.rst  modules.rst  triel.config.rst  triel.config.service.rst  triel.linking.rst  triel.models.rst  triel.models.store.rst  triel.obsolete.rst  triel.response.rst  triel.rst
lm_service/: README.md  coref.py  folded.py  folding.py  graph.py  hash.py  linking.py  onto.py  phrase.py  piles.py  preprocessing.py  relation.py  text.py  top.py  util.py
lm_service/config/: prune_noun_compound.yaml  prune_noun_compound_v2.yaml  prune_noun_compound_v3.yaml
lm_service/config/service/: el_config.yaml  entity_linker_config.example.yaml  local_re_v2.json  local_re_v3.json  reference_el_config.yaml  self.json
lm_service/linking/: onto.py  score.py  string.py  util.py
lm_service/obsolete/: folding.py
lm_service/response/: onto.py
run/: README.md  fit_linker_score_mapper.py  generate_relation_dataset.py  lm_serve.py  lm_serve_re.py  plot_deptree.py  plot_syn_tree.py  reel_from_file.py  rel_from_file.py  serve.py  test_el.py  test_elm.py  test_re.py  test_self.py  yield_top_level_output.py
run/analysis/: benchmark_coref_backends.py  benchmark_manifest.json  coref_benchmark_results.csv  coref_benchmark_results.json  linker_threshold_decision.py  samples.jsonl
run/profiling/: profile_top.py
test/: conftest.py  test.bern.py  test_acandidate.py  test_benchmark_coref_backends.py  test_candidates.py  test_conj.py  test_coref.py  test_cuda.py  test_el.py  test_el_bern.py  test_el_config.py  test_el_new.py  test_entity.py  test_flag.py  test_fold_graph.py  test_folding.py  test_graph_operations.py  test_latexenc.py  test_linker_string.py  test_map_mention_entity.py  test_operations.py  test_phrase_metaindex.py  test_preprocessing.py  test_prune.py  test_relation.py  test_scoring.py  test_tapioca.py  test_top.py  test_top_level.py  test_transform_advcl.py  test_transform_i2s.py  test_triples.py
test/config/: el_config.yaml
test/data/: bern.score.json  bern.v2.response.json  candidate_conj.json  cheops.txt  doc.coref.pkl  entities.json  entities.local.sample.json  ext_candidate_list.pkl  local.entities.json  map_tree_subtree_index.pkl  muindex_candidate.pkl  pelinker.response.json  phrase_mapper.pkl  reel_response.json  sample.a.json  sample.cheops.json  sample.meta_predicate.json
test/obsolete/: test_folding.py
test/reference/: distances.py
test/reference/el/: iterate_linking_bern.json  iterate_over_linkers.json  linking.json
triel/: README.md  __init__.py  coref.py  coref_adapter.py  onto.py  piles.py  preprocessing.py  relation.py  text.py  top.py
triel/cli/: serve.py
triel/config/: prune_noun_compound.yaml
triel/linking/: onto.py  score.py  util.py
triel/obsolete/: folding.py
triel/response/: onto.py
