[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Alexander Belikov <alexander@growgraph.dev>"]
description = "Convert text to graphs. Create candidates. Link entities"
name = "lm_service"
packages = [
  {include = "lm_service"}
]
version = "0.6.0"

[tool.poetry.dependencies]
Flask = "^2.3.2"
Flask-RESTful = "^0.3.9"
Flask-SocketIO = "^5.2.0"
Unidecode = "^1.3.4"
aenum = "^3.1.11"
coreferee = "^1.4.0"
cupy-cuda12x = "^13.2.0"
curlify = "^2.2.1"
dataclass-wizard = {extras = ["timedelta"], version = "^0.34.0"}
flask-compress = "^1.13"
flask-cors = "^4.0.1"
flask-limiter = "^3.7.0"
joblib = "^1.4.2"
lemminflect = "^0.2.2"
networkx = "^3.3"
numpy = "1.23.5"
pandas = "^2.0.3"
pathos = "^0.3.0"
poethepoet = "^0.32.1"
pybind11 = "^2.12.0"
pyinflect = "^0.5.1"
pylatexenc = "^2.10"
pytest = "7.4.0"
python = ">=3.10,<3.12"
pyyaml = "^6"
requests = "^2.31.0"
scipy = "^1.14.0"
simple-websocket = "^0.5.2"
spacy = {extras = ["cuda12x"], version = "3.5"}
suthing = "^0.3.0"
torch = "^1.13.0"
torchtext = "^0.12.0"
transformers = "4.30.2"
viztracer = "^0.15.6"
waitress = "^2.1.2"
wordfreq = "^3.0.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pygraphviz = "^1.13"
pylint = "^3.2.3"
