[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "myst-parser>=4.0.0,<5",
  "pre-commit>=3.3.3,<4",
  "pytest>=7.4.0"
]
plot = [
  "pygraphviz>=1.13,<2"
]

[project]
authors = [{email = "alexander@growgraph.dev", name = "Alexander Belikov"}]
dependencies = [
  "Flask-RESTful>=0.3.9,<0.4",
  "Flask-SocketIO>=5.2.0,<6",
  "Flask>=2.3.2,<3",
  "Unidecode>=1.3.4,<2",
  "aenum>=3.1.11,<4",
  "coreferee>=1.4.0,<2",
  "cupy-cuda12x==13.2.0",
  "curlify>=2.2.1,<3",
  "dataclass-wizard[timedelta]>=0.34.0,<0.35",
  "flask-compress>=1.13,<2",
  "flask-cors>=4.0.1,<5",
  "flask-limiter>=3.7.0,<4",
  "joblib>=1.4.2,<2",
  "lemminflect>=0.2.2,<0.3",
  "networkx>=3.3,<4",
  "numpy==1.23.5",
  "pandas>=2.0.3,<3",
  "pathos>=0.3.0,<0.4",
  "pip>=25.3",
  "pybind11>=2.12.0,<3",
  "pydantic>=1.10.0,<1.11.0",
  "pyinflect>=0.5.1,<0.6",
  "pylatexenc>=2.10,<3",
  "pyyaml>=6,<7",
  "requests>=2.31.0,<3",
  "scipy>=1.14.0,<2",
  "simple-websocket>=0.5.2,<0.6",
  "spacy==3.5",
  "suthing>=0.3.0,<0.4",
  "torch==1.13.0",
  "transformers==4.30.2",
  "viztracer>=0.15.6,<0.16",
  "waitress>=3.0.2",
  "wordfreq>=3.0.3,<4"
]
description = "Convert text to triples. Create candidates. Link entities"
name = "triel"
readme = "README.md"
requires-python = ">=3.10,<3.12"
version = "0.6.3"

[project.scripts]
triel = "triel.cli.serve:main"

[tool.hatch.build.targets.sdist]
include = ["triel"]

[tool.hatch.build.targets.wheel]
include = ["triel"]
